--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -6,7 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "# Dependencies and Setup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import time\n",
+    "from scipy.stats import linregress\n",
+    "\n",
+    "# Import API key\n",
+    "from api_keys import weather_api_key\n",
+    "\n",
+    "# Incorporated citipy to determine city based on latitude and longitude\n",
+    "from citipy import citipy\n",
+    "\n",
+    "# Output File (CSV)\n",
+    "output_data_file = \"output_data/cities.csv\"\n",
+    "\n",
+    "# Range of latitudes and longitudes\n",
+    "lat_range = (-90, 90)\n",
+    "lng_range = (-180, 180)"
    ]
   }
  ],
