Updated Google API key tried producing a google Map.  No avail.

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4     46.00       23.04  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,6 +162,90 @@
     "df = pd.read_csv(file)\n",
     "df.head()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Store Part I results into DataFrame\n",
+    "* Load the csv exported in Part I to a DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = [\n",
+    "    (40.71, -74.00),\n",
+    "    (30.26, -97.74),\n",
+    "    (46.87, -96.78),\n",
+    "    (47.60, -122.33),\n",
+    "    (32.71, -117.16)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Customize the size of the figure\n",
+    "figure_layout = {\n",
+    "    'width': '400px',\n",
+    "    'height': '300px',\n",
+    "    'border': '1px solid black',\n",
+    "    'padding': '1px',\n",
+    "    'margin': '0 auto 0 auto'\n",
+    "}\n",
+    "fig = gmaps.figure(layout=figure_layout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d90bd974ee75474b92049e5bd7edd99d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(border='1px solid black', height='300px', margin='0 auto 0 auto', padding='1px', wi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Assign the marker layer to a variable\n",
+    "markers = gmaps.marker_layer(coordinates)\n",
+    "# Add the layer to the map\n",
+    "fig.add_layer(markers)\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
