--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -164,6 +164,140 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Coords</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Pevek</td>\n",
+       "      <td>54</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1584217290</td>\n",
+       "      <td>76</td>\n",
+       "      <td>69.70</td>\n",
+       "      <td>170.31</td>\n",
+       "      <td>-10.89</td>\n",
+       "      <td>9.19</td>\n",
+       "      <td>(69.7, 170.31)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Hermanus</td>\n",
+       "      <td>53</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1584217291</td>\n",
+       "      <td>88</td>\n",
+       "      <td>-34.42</td>\n",
+       "      <td>19.23</td>\n",
+       "      <td>64.99</td>\n",
+       "      <td>13.40</td>\n",
+       "      <td>(-34.42, 19.23)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Zhigansk</td>\n",
+       "      <td>100</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1584217291</td>\n",
+       "      <td>95</td>\n",
+       "      <td>66.77</td>\n",
+       "      <td>123.37</td>\n",
+       "      <td>-5.85</td>\n",
+       "      <td>21.77</td>\n",
+       "      <td>(66.77, 123.37)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Lorengau</td>\n",
+       "      <td>100</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>1584217291</td>\n",
+       "      <td>78</td>\n",
+       "      <td>-2.02</td>\n",
+       "      <td>147.27</td>\n",
+       "      <td>83.79</td>\n",
+       "      <td>12.21</td>\n",
+       "      <td>(-2.02, 147.27)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>75</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1584216776</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42.60</td>\n",
+       "      <td>-73.97</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>23.04</td>\n",
+       "      <td>(42.6, -73.97)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       City  Cloudiness Country        Date  Humidity    Lat     Lng  \\\n",
+       "0     Pevek          54      RU  1584217290        76  69.70  170.31   \n",
+       "1  Hermanus          53      ZA  1584217291        88 -34.42   19.23   \n",
+       "2  Zhigansk         100      RU  1584217291        95  66.77  123.37   \n",
+       "3  Lorengau         100      PG  1584217291        78  -2.02  147.27   \n",
+       "4    Albany          75      US  1584216776        42  42.60  -73.97   \n",
+       "\n",
+       "   Max Temp  Wind Speed           Coords  \n",
+       "0    -10.89        9.19   (69.7, 170.31)  \n",
+       "1     64.99       13.40  (-34.42, 19.23)  \n",
+       "2     -5.85       21.77  (66.77, 123.37)  \n",
+       "3     83.79       12.21  (-2.02, 147.27)  \n",
+       "4     46.00       23.04   (42.6, -73.97)  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Coords'] = tuple(zip(df['Lat'], df['Lng']))\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,22 +316,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       (69.7, 170.31)\n",
+       "1      (-34.42, 19.23)\n",
+       "2      (66.77, 123.37)\n",
+       "3      (-2.02, 147.27)\n",
+       "4       (42.6, -73.97)\n",
+       "            ...       \n",
+       "530    (49.21, -84.77)\n",
+       "531     (-4.76, 11.86)\n",
+       "532      (50.35, 90.5)\n",
+       "533     (-18.93, 48.2)\n",
+       "534    (-41.0, 145.72)\n",
+       "Name: Coords, Length: 535, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "coordinates = [\n",
-    "    (40.71, -74.00),\n",
-    "    (30.26, -97.74),\n",
-    "    (46.87, -96.78),\n",
-    "    (47.60, -122.33),\n",
-    "    (32.71, -117.16)\n",
-    "]"
+    "coordinates = df['Coords']\n",
+    "coordinates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,13 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d90bd974ee75474b92049e5bd7edd99d",
+       "model_id": "52d0be6240d64e68ba6057a9e9d11081",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,9 +385,9 @@
    ],
    "source": [
     "# Assign the marker layer to a variable\n",
-    "markers = gmaps.marker_layer(coordinates)\n",
-    "# Add the layer to the map\n",
-    "fig.add_layer(markers)\n",
+    "heatmap_layer = gmaps.heatmap_layer(\n",
+    "    df[[\"Lat\",\"Lng\"]], weights = df[\"Humidity\"])\n",
+    "fig.add_layer(heatmap_layer)\n",
     "fig"
    ]
   },
